--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 </nav>
             </div>
             <ul class="header-right-site">
-            <li><a href="mailto:info@devstudio.com" title="mail" class="header-contact"><svg class="icon-header" width="16" height="12">
+            <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header-contact"><svg class="icon-header" width="16" height="12">
                         <use href="./images/icomoon/symbol-defs.svg#icon-mail"></use>
                     </svg>info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" title="phone" class="header-contact"><svg class="icon-header" width="10" height="16">
@@ -163,7 +163,7 @@
     <footer class="footer">
         <div class="container">
             <div>
-                <a href="./index.html" class="webstudio"><span class="web"><b>Web</b></span>Studio</a>
+                <a href="./index.html" class="webstudio" lang="en"><span class="web"><b>Web</b></span>Studio</a>
                 <address class="footer-address">
                     <ul class="footer-adress">
                         <li class="footer-adress__item">
@@ -171,7 +171,7 @@
                                 title="GoogleMaps" class="google">м. Київ, пр-т Лесі Українки, 26</a>
                         </li>
                         <li class="footer-adress__item">
-                            <a href="mailto:info@devstudio.com" title="mail"
+                            <a href="mailto:info@devstudio.com" lang="en" title="mail"
                                 class="footer-adress__info">info@devstudio.com</a>
                         </li>
                         <li class="footer-adress__item">
