--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
                         <form class="modal-form" autocomplete="on">
-                            <h2>Залиште свої дані, ми вам передзвоним</h2>
+                            <h2 class="modal-text">Залиште свої дані, ми вам передзвоним</h2>
                                 <label for="name" class="modal-label">Ім'я
                                     <span class="modal-input-wrapper">
                                     <input type="text" class="modal-input" name="name" id="name" autofocus />
@@ -85,7 +85,7 @@
                                         </svg>
                                     </div>
                                     Погоджуюся з розсилкою та приймаю   
-                                    <span><a href="#">Умови
+                                    <span><a href="#" class="checkbox__contract">Умови
                                             договору</a></span>
                                 </label>
                                 <button type="submit" class="modal-form-button">Відправити</button>
