--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
         </div>
     </header>
     <main>        
-        <section class="bisnes section">
+        <section class="bisnes">
             <div class="container">
-                <h1 class="efect">Ефективні рішення для вашого бізнесу</h1>
-                <!-- <button type="submit" class="button">Замовити послугу</button> -->
-                <button type="submit" class="button" data-modal-open>Замовити послугу</button>
+                <h1 class="bisnes__title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="submit" class="bisnes__button" data-modal-open>Замовити послугу</button>
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
                         <form class="modal-form" autocomplete="on">
@@ -95,29 +94,29 @@
                 </div>
             </div>
         </section>
-        <section  class="benefits section">
+        <section  class="benefits">
             <div class="container">
                 <h2 hidden>Наші переваги</h2>
-                <ul class="benefits__nav">
+                <ul class="benefits__list">
                     <li class="benefits__item">  
-                        <div class="benefits__image"><svg class="antena-icon" width="70" height="70">
+                        <div class="benefits__box"><svg class="antena-icon" width="70" height="70">
                             <use href="./images/icomoon/symbol-defs.svg#icon-antenna-1"></use>
                         </svg></div>
-                        <h3 class="benefits__meta">Увага до деталей</h3>
+                        <h3 class="benefits__title">Увага до деталей</h3>
                         <p class="benefits__description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="benefits__item">
-                        <div class="benefits__image"><svg class="clock-icon" width="70" height="70">
+                        <div class="benefits__box"><svg class="clock-icon" width="70" height="70">
                                 <use href="./images/icomoon/symbol-defs.svg#icon-clock-1"></use>
                             </svg></div>
-                        <h3 class="benefits__meta">Пунктуальнысть</h3>
+                        <h3 class="benefits__title">Пунктуальнысть</h3>
                         <p class="benefits__description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="benefits__item">
-                        <div class="benefits__image"><svg class="diagram-icon" width="70" height="70">
+                        <div class="benefits__box"><svg class="diagram-icon" width="70" height="70">
                                 <use href="./images/icomoon/symbol-defs.svg#icon-diagram-1"></use>
                             </svg></div>
-                        <h3 class="benefits__meta">Планування</h3>
+                        <h3 class="benefits__title">Планування</h3>
                         <p class="benefits__description">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="benefits__item">
@@ -132,82 +131,85 @@
         </section>
         <section class="work section">
             <div class="container">
-                <h2 class="work-text">Чим ми займаємося</h2>
-                <ul class="work-page">
-                    <li class="work-page__item"><img src="./images/1.jpg" alt="notebook" width="370"><div class="work-page__link">Десктопні додатки</div></li>
-                    <li class="work-page__item"><img src="./images/2.jpg" alt="phone" width="370"><div class="work-page__link">Мобільні додатки</div></li>
-                    <li class="work-page__item"><img src="./images/3.jpg" alt="desine" width="370"><div class="work-page__link">Дизайнерські рішення</div></li>
+                <h2 class="work__title">Чим ми займаємося</h2>
+                <ul class="work__list">
+                    <li class="work__item"><img class="work__image" src="./images/1.jpg" alt="notebook" width="370"><div class="work__box">Десктопні додатки</div></li>
+                    <li class="work__item"><img class="work__image" src="./images/2.jpg" alt="phone" width="370"><div class="work__box">Мобільні додатки</div></li>
+                    <li class="work__item"><img class="work__image" src="./images/3.jpg" alt="desine" width="370"><div class="work__box">Дизайнерські рішення</div></li>
                 </ul>
             </div>
         </section>
-        <section class="comand section">
+        <section class="team">
             <div class="container">
-                <h2 class="comand-name">Наша команда</h2>
-                <ul class="comand-gallery">
-                    <li class="comand-gallery__item">
+                <h2 class="team-name">Наша команда</h2>
+                <ul class="team-gallery">
+                    <li class="team-gallery__item">
                         <img src="./images/4.jpg" alt="Igor" width="270">
-                        <div class="comand-box">
-                            <h3 class="comand-box__name">Ігор Дем'яненко</h3>
-                            <p class="comand-box__direction" lang="en">Product Designer</p>
-                            <ul class="comand-box__social">
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="team-box">
+                            <h3 class="team-box__name">Ігор Дем'яненко</h3>
+                            <p class="team-box__direction" lang="en">Product Designer</p>
+                            <ul class="team-box__social">
+                                <li class="team-box__item">
+                                    <a class="team-box__link" href="#">
+                                        <svg class="team-box__icon">
+                                            <use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="comand-gallery__item">
+                    <li class="team-gallery__item">
                         <img src="./images/5.jpg" alt="Olga" width="270">
-                        <div class="comand-box">
-                            <h3 class="comand-box__name">Ольга Рєпіна</h3>
-                            <p class="comand-box__direction" lang="en">Frontend Developer</p>
-                            <ul class="comand-box__social">
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="team-box">
+                            <h3 class="team-box__name">Ольга Рєпіна</h3>
+                            <p class="team-box__direction" lang="en">Frontend Developer</p>
+                            <ul class="team-box__social">
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>                       
                     </li>
-                    <li class="comand-gallery__item">
+                    <li class="team-gallery__item">
                         <img src="./images/6.jpg" alt="Mikola" width="270">
-                        <div class="comand-box">
-                            <h3 class="comand-box__name">Микола Тарасов</h3>
-                            <p class="comand-box__direction" lang="en">Marketing</p>
-                            <ul class="comand-box__social">
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="team-box">
+                            <h3 class="team-box__name">Микола Тарасов</h3>
+                            <p class="team-box__direction" lang="en">Marketing</p>
+                            <ul class="team-box__social">
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="comand-gallery__item">
+                    <li class="team-gallery__item">
                         <img src="./images/7.jpg" alt="Michailo" width="270">
-                        <div class="comand-box">
-                            <h3 class="comand-box__name">Михайло Єрмаков</h3>
-                            <p class="comand-box__direction" lang="en">UI Designer</p>
-                            <ul class="comand-box__social">
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="team-box">
+                            <h3 class="team-box__name">Михайло Єрмаков</h3>
+                            <p class="team-box__direction" lang="en">UI Designer</p>
+                            <ul class="team-box__social">
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="comand-box__item"><a class="comand-box__link" href="#"><svg class="comand-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
@@ -239,12 +241,12 @@
     <footer class="footer">
         <div class="container">
             <div>
-            <a href="./index.html"class="webstudio " lang="en"><span class="web"><b>Web</b></span>Studio</a>
+            <a href="./index.html"class="webstudio" lang="en"><span class="web"><b>Web</b></span>Studio</a>
             <address class="footer-address">
-                <ul class="footer-nav">
+                <ul class="footer-address__nav">
                     <li class="footer-adress__item">
                         <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                        title="GoogleMaps" class="google">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        title="GoogleMaps" class="footer-adress__google">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li class="footer-adress__item">
                     <a href="mailto:info@devstudio.com" title="mail" class="footer-adress__info">info@devstudio.com</a></li>
                 <li class="footer-adress__item">
@@ -253,7 +255,7 @@
             </address>
             </div>
             <div class="join">
-                <h2 class="join-name">Приєднуйтесь</h2>
+                <h2 class="join__name">Приєднуйтесь</h2>
                 <ul class="join-social">
                     <li><a href="#" class="join-social__logo">
                         <svg class="join-social__image">
