--- a/portfolio.html
+++ b/portfolio.html
@@ -49,110 +49,110 @@
             </ul>
             <ul class="project-list">
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                        <div class="hiding">                        
+                    <a href="#" class="project__link" target="_blank">
+                        <div class="project__image-container">                        
                         <img src="./images/2-1.jpg" alt="notebook" width="370" height="294">
-                        <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                        <p class="project__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
-                    <div class="textmaker"> 
-                        <h2>Технокряк</h2> 
-                        <p>Веб-сайт</p>
+                    <div class="project__text-container"> 
+                        <h2  class="project__title">Технокряк</h2> 
+                        <p class="project__text">Веб-сайт</p>
                     </div>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                         <img src="./images/2-2.jpg" alt="basket" width="370">
-                        <p class="overlay">123123123123123123123123123</p>
+                        <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                        <h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                    <div class="project__text-container">
+                        <h2 class="project__title">Постер New Orlean vs Golden Star</h2>
+                        <p class="project__text">Дизайн</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                     <img src="./images/2-3.jpg" alt="seafood" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Ресторан Seafood</h2>
+                    <p class="project__text">Додаток</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                     <img src="./images/2-4.jpg" alt="sony" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Проєкт Prime</h2>
+                    <p class="project__text">Маркетинг</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">    
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">    
                     <img src="./images/2-5.jpg" alt="box" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Проєкт Boxes</h2>
+                    <p class="project__text">Додаток</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                     <img src="./images/2-6.jpg" alt="monik" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Inspiration has no Borders</h2>
+                    <p class="project__text">Веб-сайт</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                     <img src="./images/2-7.jpg" alt="book" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Видання Limited Edition</h2>
+                    <p class="project__text">Дизайн</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                     <img src="./images/2-8.jpg" alt="lab" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Проєкт LAB</h2>
+                    <p class="project__text">Маркетинг</p>
                     </div>
                     </a>    
                 </li>
                 <li class="project">
-                    <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">
+                    <a href="#" class="project__link" target="_blank">
+                    <div class="project__image-container">
                     <img src="./images/2-9.jpg" alt="work" width="370">
-                    <p class="overlay">123123123123123123123123123</p>
+                    <p class="project__overlay">123123123123123123123123123</p>
                     </div>
-                    <div class="textmaker">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                    <div class="project__text-container">
+                    <h2 class="project__title">Growing Business</h2>
+                    <p class="project__text">Додаток</p>
                     </div>
                     </a>    
                 </li>
