--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </nav>
             </div>
             <ul class="header__contact">
-                <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header-contact"><svg class="icon-header" width="16" height="12">
+                <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header__contact-link"><svg class="icon-header" width="16" height="12">
                         <use href="./images/icomoon/symbol-defs.svg#icon-mail"></use>
                     </svg>info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" title="phone" class="header-contact"><svg class="icon-header" width="10" height="16">
+                <li><a href="tel:+380961111111" title="phone" class="header__contact-link"><svg class="icon-header" width="10" height="16">
                     <use href="./images/icomoon/symbol-defs.svg#icon-smartphone"></use>
                 </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -100,17 +100,14 @@
                         <div class="employee-box">
                             <h3 class="employee-box__name">Ігор Дем'яненко</h3>
                             <p class="employee-box__direction" lang="en">Product Designer</p>
-                            <ul class="employee-box__social">
-                                <li class="employee-box__item">
-                                    <a class="employee-box__link" href="#">
-                                        <svg class="employee-box__icon">
-                                            <use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                            <ul class="socials">
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
@@ -120,14 +117,14 @@
                         <div class="employee-box">
                             <h3 class="employee-box__name">Ольга Рєпіна</h3>
                             <p class="employee-box__direction" lang="en">Frontend Developer</p>
-                            <ul class="employee-box__social">
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                            <ul class="socials">
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>                       
@@ -137,14 +134,14 @@
                         <div class="employee-box">
                             <h3 class="employee-box__name">Микола Тарасов</h3>
                             <p class="employee-box__direction" lang="en">Marketing</p>
-                            <ul class="employee-box__social">
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                            <ul class="socials">
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
@@ -154,14 +151,14 @@
                         <div class="employee-box">
                             <h3 class="employee-box__name">Михайло Єрмаков</h3>
                             <p class="employee-box__direction" lang="en">UI Designer</p>
-                            <ul class="employee-box__social">
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                            <ul class="socials">
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
@@ -207,28 +204,28 @@
             </address>
             </div>
             <div class="join">
-                <h2 class="join__name">Приєднуйтесь</h2>
-                <ul class="join-social">
-                    <li><a href="#" class="join-social__logo">
-                        <svg class="join-social__image">
+                <h2 class="footer__title">Приєднуйтесь</h2>
+                <ul class="socials">
+                    <li><a href="#" class="socials__link socials__link--dark">
+                        <svg class="socials__image socials__image--dark">
                     <use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                     </svg></a></li>
-                    <li><a href="#" class="join-social__logo">
-                        <svg class="join-social__image">
+                    <li><a href="#" class="socials__link socials__link--dark">
+                        <svg class="socials__image socials__image--dark">
                     <use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                     </svg></a></li>
-                    <li><a href="#" class="join-social__logo">
-                        <svg class="join-social__image">
+                    <li><a href="#" class="socials__link socials__link--dark">
+                        <svg class="socials__image socials__image--dark">
                     <use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                     </svg></a></li>
-                    <li><a href="#" class="join-social__logo">
-                        <svg class="join-social__image">
+                    <li><a href="#" class="socials__link socials__link--dark">
+                        <svg class="socials__image socials__image--dark">
                     <use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a></li>
                 </ul>
             </div>
             <div class="subscription">
-                <h2 class="subscription__name">Підпишіться на розсилку</h2>
+                <h2 class="footer__title">Підпишіться на розсилку</h2>
                 <form class="subscription__footer-form">
                     <label for="email" class="subscription__label">
                         <input class="subscription__input" type="text" placeholder="E-mail" id="email"/>
@@ -241,33 +238,33 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <form class="modal-form" autocomplete="on">
+            <form class="modal__form" autocomplete="on">
                 <h2 class="modal-text">Залиште свої дані, ми вам передзвоним</h2>
-                <label for="name" class="modal-label">Ім'я
-                    <span class="modal-input-wrapper">
+                <label for="name" class="modal__label">Ім'я
+                    <span class="modal__input-wrapper">
                         <input type="text" class="modal-input" name="name" id="name" autofocus />
-                        <svg width="12" height="12" class="modal-icon">
+                        <svg width="12" height="12" class="modal__icon">
                             <use href="./images/icomoon1/symbol-defs.svg#icon-man-1"></use>
                         </svg>
                     </span>
                 </label>
-                <label for="tel" class="modal-label">Телефон
-                    <span class="modal-input-wrapper">
+                <label for="tel" class="modal__label">Телефон
+                    <span class="modal__input-wrapper">
                         <input type="tel" class="modal-input" name="tel" id="tel" />
-                        <svg width="13" height="13" class="modal-icon">
+                        <svg width="13" height="13" class="modal__icon">
                             <use href="./images/icomoon1/symbol-defs.svg#icon-tel-1"></use>
                         </svg>
                     </span>
                 </label>
-                <label for="mail" class="modal-label">Пошта
-                    <span class="modal-input-wrapper">
+                <label for="mail" class="modal__label">Пошта
+                    <span class="modal__input-wrapper">
                         <input type="email" class="modal-input" name="mail" id="mail" />
-                        <svg width="15" height="12" class="modal-icon">
+                        <svg width="15" height="12" class="modal__icon">
                             <use href="./images/icomoon1/symbol-defs.svg#icon-mail-new-1"></use>
                         </svg>
                     </span>
                 </label>
-                <label for="comment" class="modal-label">Коментар
+                <label for="comment" class="modal__label">Коментар
                     <textarea class="modal__textarea" name="comment" id="comment" placeholder="Введіть текст"></textarea>
                 </label>
                 <label for="policy" class="checkbox">
@@ -282,7 +279,7 @@
                     <span><a href="#" class="checkbox__contract">Умови
                             договору</a></span>
                 </label>
-                <button type="submit" class="modal-form-button">Відправити</button>
+                <button type="submit" class="modal__form-button">Відправити</button>
             </form>
             <button class="close" data-modal-close></button>
         </div>
