--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
                 </nav>
             </div>
             <ul class="header__contact">
-            <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header-contact"><svg class="icon-header" width="16" height="12">
+            <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header__contact-link"><svg class="icon-header" width="16" height="12">
                         <use href="./images/icomoon/symbol-defs.svg#icon-mail"></use>
                     </svg>info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" title="phone" class="header-contact"><svg class="icon-header" width="10" height="16">
+            <li><a href="tel:+380961111111" title="phone" class="header__contact-link"><svg class="icon-header" width="10" height="16">
                         <use href="./images/icomoon/symbol-defs.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
         </div>
@@ -40,12 +40,12 @@
         <section class="direction">
             <h1 hidden>button</h1>
             <div class="container">
-            <ul class="direction-button">
-                <li><button type="submit" class="direction-button__button button1">Усі</button></li>
-                <li><button type="submit" class="direction-button__button button2">Веб-сайти</button></li>
-                <li><button type="submit" class="direction-button__button button3">Додатки</button></li>
-                <li><button type="submit" class="direction-button__button button4">Дизайн</button></li>
-                <li><button type="submit" class="direction-button__button button5">Маркетинг</button></li>
+            <ul class="filter">
+                <li><button type="submit" class="filter__button">Усі</button></li>
+                <li><button type="submit" class="filter__button">Веб-сайти</button></li>
+                <li><button type="submit" class="filter__button">Додатки</button></li>
+                <li><button type="submit" class="filter__button">Дизайн</button></li>
+                <li><button type="submit" class="filter__button">Маркетинг</button></li>
             </ul>
             <ul class="project-list">
                 <li class="project">
@@ -180,7 +180,7 @@
                 </address>
             </div>
             <div class="join">
-                <h2 class="join-name">Приєднуйтесь</h2>
+                <p class="footer__title">Приєднуйтесь</p>
                 <ul class="join-social">
                     <li><a href="#" class="join-social__logo">
                             <svg class="join-social__image">
@@ -201,7 +201,7 @@
                 </ul>
             </div>
             <div class="subscription">
-                <h2 class="subscription__name">Підпишіться на розсилку</h2>
+                <p class="footer__title">Підпишіться на розсилку</p>
                 <form class="subscription__footer-form">
                     <label for="email" class="subscription__label">
                         <input class="subscription__input" type="text" placeholder="E-mail" id="email" />
